Add login page and bootstrap to site

--- a/app.yaml
+++ b/app.yaml
@@ -2,11 +2,20 @@ runtime: php
 env: flex 
 runtime_config: 
     document_root: . 
+handlers:
+    - url: /img
+      static_dir: static/img
+    - url: /js
+      static_dir: static/js
+    - url: /css
+      static_dir: static/css
+    - url: .*
+      script: auto
 env_variables: 
     APP_LOG: errorlog 
-    GOOGLE_STORAGE_BUCKET: "cs348-project-279406.appspot.com"
-    MYSQL_USER: "root" 
+    GOOGLE_STORAGE_BUCKET: "https://cs348demo-279318.uc.r.appspot.com/"
+    MYSQL_USER: "root"
     MYSQL_PASSWORD: "password" 
-    MYSQL_DSN: "mysql:dbname=cs348-project-db-1;unix_socket=/cloudsql/cs348-project-279406:us-east4:cs348-project-db-1"
+    MYSQL_DSN: "mysql:dbname=cs348demo-db;unix_socket=/cloudsql/cs348demo-279318:us-central1:cs348demo-db"
 beta_settings: 
-    cloud_sql_instances: "cs348-project-279406:us-east4:cs348-project-db-1"
+    cloud_sql_instances: "cs348demo:central1:cs348demo-db=tcp:3306"
